--- a/_posts/2019-01-12-酒醉街头.md
+++ b/_posts/2019-01-12-酒醉街头.md
@@ -7,4 +7,4 @@ mathjax: true
 
 # 酒醉街头
 
-穿着西装扭臀跳舞才是最性感的！最好是把你的手放在我的腰间，这样我就可以向下放肆地吻. 我真的好喜欢跳舞，单人舞，双人舞，群舞。但我不喜欢规则，不要告诉我跳得对与错，因为我的舞是发自内心的。 
+我们只有23岁，珍惜你该珍惜的，青春、现在、美好，哪怕挥霍了也不重要，因为它一旦流逝，就再也不会回头。不要一味感慨自己的衰老和不幸，时间还长，快乐就是现在。
