--- a/_posts/2019-06-12-Jane.md
+++ b/_posts/2019-06-12-Jane.md
@@ -5,4 +5,5 @@ featured-img: jane4
 mathjax: true
 ---
 
-# 商场奇缘
+
+这世界本就很美好，首先大自然就很美。高雅的书和音乐会很愉悦，抖音酒精游戏也很有趣。爱很美，恨很美，冷漠是美，痛苦是美，雍容华贵，衣衫褴褛，一无是处，都有美丽的地方，甚至死亡也很美，只要你爱我，只要我很快乐。 
