--- a/_posts/2018-01-01-跨年晚会.md
+++ b/_posts/2018-01-01-跨年晚会.md
@@ -1,10 +1,8 @@
 ---
 layout: post
-title: 跨年晚会
+title: 跨年舞会
 featured-img: jane3
 mathjax: true
 ---
-
-# 跨年晚会
 
 剑桥现在又有雷声，这座城市真的好特别，我从未在英国听过雷声，在这里已经两次了。最近空气中有许多蚊子，我骑车时常会有十来只小虫子爬在衣服上，有时它们会飞进我的嘴巴，有时钻进眼睛里。我一直感觉我与剑桥格格不入，她优雅古典高贵，但我和这蚊子倒很搭配。
