--- a/_posts/2019-06-12-Jane.md
+++ b/_posts/2019-06-12-Jane.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: 街拍
+title: 雌雄同体
 featured-img: jane4
 mathjax: true
 ---
 
-
-这世界本就很美好，首先大自然就很美。高雅的书和音乐会很愉悦，抖音酒精游戏也很有趣。爱很美，恨很美，冷漠是美，痛苦是美，雍容华贵，衣衫褴褛，一无是处，都有美丽的地方，甚至黑色也很美，只要我很快乐。 
+地球的规则，性别的沟壑，只要你爱我，我就能跨过。
+世俗的冷漠，伤痕累累地活着，只要你爱我，没人能打败我。
+还有谁会比你温柔，只有我能被你触碰。
+流着眼泪的我好快乐，让我溺死在你的怀中。
