--- a/_posts/2019-01-12-酒醉街头.md
+++ b/_posts/2019-01-12-酒醉街头.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: 酒醉街头
+title: 24
 featured-img: jane2
 mathjax: true
 ---
 
-我们只有23岁，珍惜你该珍惜的，青春、现在、美好，哪怕挥霍了也不重要，因为它一旦流逝，就再也不会回头。不要一味感慨自己的衰老和不幸，时间还长，快乐就是现在。
+早已忘记了你的名字，
+却爱上你留下的影子！
