--- a/风.md
+++ b/风.md
@@ -1,18 +1,15 @@
 ---
 layout: page
-title: 风
+title: 国风
 permalink: /wind/
 ---
 
 
-### 《妖风》<br/>
-夜之阵阵风<br/>
-如车乱撞<br/>
-筋骨折<br/>
-昏死的灯下<br/>
-眼睛流出血花<br/>
-妖风呐喊<br/>
-撕扯大地边缘<br/>
-撕碎了我的绝美边缘<br/>
+国风·周南·关雎
+先秦：佚名
 
-2015.10.20
+关关雎鸠，在河之洲。窈窕淑女，君子好逑。
+参差荇菜，左右流之。窈窕淑女，寤寐求之。
+求之不得，寤寐思服。悠哉悠哉，辗转反侧。
+参差荇菜，左右采之。窈窕淑女，琴瑟友之。
+参差荇菜，左右芼之。窈窕淑女，钟鼓乐之。
